Just started... 1% completed

--- a/MediacalPhysicsWorls/MediacalPhysicsWorls.csproj
+++ b/MediacalPhysicsWorls/MediacalPhysicsWorls.csproj
@@ -127,15 +127,39 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\App.css" />
+    <Content Include="Content\bootstrap-theme.css" />
+    <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\bikes.png" />
+    <Content Include="Images\elk.jpg" />
+    <Content Include="Images\icon-biathlon.png" />
+    <Content Include="Images\icon-bobsled.png" />
+    <Content Include="Images\icon-cross-country.png" />
+    <Content Include="Images\icon-downhill.png" />
+    <Content Include="Images\icon-snowboard.png" />
+    <Content Include="Images\lake.jpg" />
+    <Content Include="Images\range-1.png" />
+    <Content Include="Images\range-2.png" />
+    <Content Include="Images\range-3.png" />
+    <Content Include="Images\range-4.png" />
+    <Content Include="Images\range-5.png" />
+    <Content Include="Images\site-logo-white-70pct.png" />
+    <Content Include="Images\site-logo-white.png" />
+    <Content Include="Images\snowboarder.jpg" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\bootstrap-theme.css.map" />
+    <Content Include="Content\bootstrap-theme.min.css.map" />
+    <Content Include="Content\bootstrap.css.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\cbpAnimatedHeader.js" />
+    <Content Include="Scripts\classie.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
